--- a/src/main/resources/www/style.css
+++ b/src/main/resources/www/style.css
@@ -1,14 +1,16 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f9;
     margin: 20px;
 }
-h1 {
+
+h1, h2 {
     color: #333;
 }
+
 form {
     margin-bottom: 20px;
 }
+
 #getResponse, #postResponse {
     margin-top: 10px;
     padding: 10px;
